syntax = "proto3";

message User {
  string login = 1;
  string senha = 2;
}

message LoginRequest {
  User user = 1;
}

message LoginResponse {
  string message = 1;
  string token = 2;
  string error = 3;
}

service UserService {
  rpc Login (LoginRequest) returns (LoginResponse);
}
