syntax = "proto3";

message GenerateTokenRequest {
    string login = 1;
}

message GenerateTokenResponse {
    string error = 1;
    string token = 2;
}

service TokenService {
    rpc  generateToken (GenerateTokenRequest) returns (GenerateTokenResponse);
}
